anchor jump working, pin unpin working, looks good to go other than the deployment issues

--- a/details.css
+++ b/details.css
@@ -66,7 +66,6 @@ h2 {
   border: none;
   cursor: pointer;
   padding: 4px;
-  border-radius: 6px;
 }
 
 .copy-btn img {
@@ -126,4 +125,15 @@ code {
 /* Hide scrollbar for Chrome/Edge/Safari */
 #pin-title::-webkit-scrollbar {
   display: none;
+}
+
+.pin-block img {
+  max-width: auto;
+  max-height: 100%; /* adjust to taste */
+  max-width: 300px;
+  max-height: 300px;
+  object-fit: contain; /* keeps whole image visible */
+  border-radius: 6px;
+  display: block;
+  margin: 10px 0;
 }
